fix: build 파일에 utils/format 추가

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "files": [
       "public/**/*",
       "main.js",
-      "preload.js"
+      "preload.js",
+      "src/lib/utils/format.js"
     ],
     "win": {},
     "linux": {},
