--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "electron-store": "^10.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "attractions": "^3.7.2",
